@@ -428,26 +428,26 @@ CATEGORIES :
       - DESCR  :
         CODE   : ex_cpp_typed_query_findall
 
-  - g_typed_query_find_next:
-      NAME     : find_next
-      DESCR    : &g_typed_query_find_next_descr
-                 This will find the first row that fulfil the query condition.
-                 Use the return value (row number) or greater (but not less!) as parameter
-                 for successive calls to iterate through matching rows.
-      SUMMARY  : &g_typed_query_find_next_summary
-                 Find next matching row.
+  - g_typed_query_find_first:
+      NAME     : find_first
+      DESCR    : &g_typed_query_find_first_descr
+                 This will find the first row that fulfils the query condition.
+                 Use the return value + 1 as parameter for successive calls to iterate through 
+                 matching rows.
+      SUMMARY  : &g_typed_query_find_first_summary
+                 Find first matching row.
       PARAMS:
       - NAME   : lastmatch
         TYPES  : size_t
-        DESCR  : &g_typed_query_find_next_parm_lastmatch_descr
-                 "Row to start search from (not inclusive). Default is -1 (start from beginning)."
+        DESCR  : &g_typed_query_find_first_parm_lastmatch_descr
+                 "Row to start search from (inclusive). Default is 0 (start from beginning)."
       RETURN:
         TYPES  : size_t
-        DESCR  : &g_typed_query_find_next_return_descr
+        DESCR  : &g_typed_query_find_first_return_descr
                  Row index that matches the query (or -1 if none).
       EXAMPLES:
       - DESCR  :
-        CODE   : ex_cpp_typed_query_find_next
+        CODE   : ex_cpp_typed_query_find_first
 
   - g_typed_query_sum_2:
       IGNORE: ""
